Fix T47838: Walk gravity fails w/ intersecting objects

Regression in 3ad0344, fix from @mano-wii.

More comprehensive fix can be done after 2.77a.